examples/test/testpolicy5549.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5549
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key1: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value27
          key39: value42
          key43: value40
      podSelector:
        matchLabels:
          key23: value6
